# flecs-test-runner-sample-project

./: .gitignore  CMakeLists.txt  Functions.cmake  LICENSE  README.md  build.ps1  configure.ps1  main.cpp
__untracked/: new 1.txt  old.cpp
src/: CMakeLists.txt  main.cpp
